Sat Sep 27 16:48:00 1997  Jason Merrill  <jason@yorick.cygnus.com>

	* std/complext.h: Lose injection decls.
	* std/fcomplex.h: Likewise.
	* std/dcomplex.h: Likewise.
	* std/ldcomplex.h: Likewise.

Sat Sep 27 16:47:35 1997  Mark Mitchell  <mmitchell@usa.net>

	* std/complext.h: Declare templates before making them
	friends.  Use new friend <> syntax.
	* std/complext.cc: Don't rely on guiding declarations.
	* std/fcomplex.h: Use new friend <> syntax.
	* std/dcomplex.h: Likewise.
	* std/ldcomplex.h: Likewise.

Thu Sep 25 19:55:56 1997  Jason Merrill  <jason@yorick.cygnus.com>

	* std/bastring.h: Enable exceptions.
 	(assign, append, insert, replace): Implement member template versions.

1997-09-15 02:37  Ulrich Drepper  <drepper@cygnus.com>

	* config/linux.mt: New file.  Make sure _PTHREADS is defined
	if necessary.
	* configure.in: Find linux.mt file.

Thu Sep 11 15:03:20 1997  Jason Merrill  <jason@yorick.cygnus.com>

	* std/bastring.h (class basic_string): Add global scope to
	use of reverse_iterator.

Tue Sep  9 19:47:07 1997  Jason Merrill  <jason@yorick.cygnus.com>

	* std/bastring.h: Adjust use of reverse_iterator template.

Wed Aug 27 00:04:33 1997  Alexandre Oliva  (oliva@dcc.unicamp.br)

	* Makefile.in: create correct multiple links to
	shared libstdc++.

Tue Aug 26 12:24:01 1997  H.J. Lu  (hjl@gnu.ai.mit.edu)

	* testsuite/Makefile.in (check): Don't depend on site.exp.
	(just-check): Depend on site.exp.

Mon Aug 25 14:26:45 1997  Jason Merrill  <jason@yorick.cygnus.com>

	* Makefile.in (CXXFLAGS): Add -Weffc++.

Sat Aug 23 21:25:37 1997  Mark Mitchell  <mmitchell@usa.net>

	* bastring.h: Enable reverse_iterator and its ilk.

	* bastring.h: Provide specializations of member function templates
	for const_iterator.

Wed Jul 30 10:59:00 1997  Benjamin Kosnik  <bkoz@rhino.cygnus.com>

	* stlinst.cc: Add instantiation file for 
	__default_alloc_template<fale, 0> and
	__malloc_alloc_template<0>

Sun Jun  1 17:03:40 1997  Jason Merrill  <jason@yorick.cygnus.com>
