@@ -5,9 +5,4 @@
 
 #include <std/bastring.h>
 
-extern "C++" {
-typedef basic_string <char> string;
-// typedef basic_string <wchar_t> wstring;
-} // extern "C++"
-
 #endif
